--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="header-deta">
                 <div>
-                    <h1>Inspire your inspiration</h1>
+                    <h1>Inspire your Inspiration</h1>
                     <h2>Simple to use for your app, products showcase and your inspiration</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus
                         tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat
